# namegen

./: .gitignore  Cargo.toml  Config.toml  README.md  architecture.md  getting-started.md
scripts/: benchmark.sh
src/: checkpoint.rs  config.rs  errors.rs  lib.rs  main.rs  model.rs  quality.rs  sampling.rs  tokenizer.rs  trainer.rs  value.rs
tests/: namegen_integration.rs
