[package]
name = "namegen"
version = "0.1.0"
edition = "2024"
description = "High-performance CLI for training and generating realistic random names"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
bincode = { version = "2.0.1", features = ["serde"] }
indicatif = "0.18.0"
lock_api = "0.4.14"
log = "0.4.28"
parking_lot = "0.12.5"
rand = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
thiserror = "2.0.17"
toml = "0.9.5"
wide = "1.2.0"
